2006-10-08  Jürgen Reuter  <reuter@ipd.uka.de>

	* lily/ligature-bracket-engraver: Bugfix: Add missing stream event
	code.  This patch fixes ligature brackets that were not at all
	engraved any more.

2006-10-08  Graham Percival  <gpermus@gmail.com>

	* Docuemntation/user/page.itely: clarify two-pass vs. ragged-bottom.

	* ly/property-init.ly: fix sacred harp notehead shapes (bug 96).

	* scm/define-context-properties.scm: clarified docs (bug 91).

	* Documentation/user/basic-notation.itely: document volta brackets
	not aligning (bug 63).

2006-10-08  John Mandereau  <john.mandereau@free.fr>

	* po/fr.po: update translation.

	* po/: update msgids.

2006-10-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (HELP_CATALOGS): Fix in-build-tree locales.

2006-10-08  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* Documentation/user/page.itely (Two-pass vertical spacing): add
	documentation for two-pass spacing technique.

2006-10-06  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/convert-ly.txt: new file; new
	storage place for this file (moved from bugs/ CVS).

2006-10-06  Jürgen Reuter  <reuter@ipd.uka.de>

	* lily/note-head.cc: Fixed programming_error message.

2006-10-06  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-grobs.scm (pure-conversion): move pure-callback
	further into body.

	* scm/script.scm (default-script-alist): set avoid-slur for turn,
	marcato, stopped, thumb.

2006-10-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/completion-note-heads-engraver.cc (process_music): don't
	skimp on memory usage.

	* lily/beam.cc (set_stem_lengths): do set_stemend for invisible
	stems too. Fixes #5

	* lily/parenthesis-engraver.cc (acknowledge_grob): set parent of
	parenthesis item. This fixes premature Y-extent triggering. Fixes
	issue #95. 
 
	* VERSION (PATCH_LEVEL): bump version.

2006-10-04  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced-notation.itely: added