@@ -1,3 +1,8 @@
+2006-10-09  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* scm/define-markup-commands.scm (postscript): gsave & grestore
+	around embedded PS. Do setlinewidth too. Fixes  #109.
+
 2006-10-08  Jürgen Reuter  <reuter@ipd.uka.de>
 
 	* lily/ligature-bracket-engraver: Bugfix: Add missing stream event
